<resources>
    <string name="app_name">CarLoanCalculator</string>
    <string name="car_price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="loan_period">Loan Period</string>
    <string name="calculate_button">Calculate</string>
    <string name="car_loan">Car Loan</string>
    <string name="car_interest">Car Interest</string>
    <string name="monthly_repayment">Monthly Repayment</string>
</resources>
